// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat/members/slack GetMembers performs correctly 1`] = `
Ok {
  "value": Object {
    "members": Array [
      Object {
        "id": "USLACKBOT",
        "isBot": false,
        "username": "Slackbot",
      },
    ],
    "nextPage": "dXNlcjpVRjNWMVBSSFA=",
  },
}
`;

exports[`chat/members/slack GetMembers performs correctly 2`] = `
Ok {
  "value": Object {
    "members": Array [
      Object {
        "id": "UF3V1PRHP",
        "isBot": false,
        "username": "Raj",
      },
    ],
    "nextPage": "dXNlcjpVRjRQUkJITDc=",
  },
}
`;
